Fix narrowScreen logo alignment

--- a/themes/basakbeykoz/react-src/src/views/canvas/_canvas_page_home.scss
+++ b/themes/basakbeykoz/react-src/src/views/canvas/_canvas_page_home.scss
@@ -119,7 +119,7 @@ $standardGroupInnerblockPadding: 100px;
               display: grid;
               @include narrowScreen() {
                 justify-self: start;
-                width: fit-content;
+                justify-content: start;
               }
               & > img {
                 width: 100%;
